<resources>
    <string name="app_name">E-Commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">Product</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search">Search</string>
    <string name="filters">Filters:</string>
    <string name="select_filter">Select Filter</string>
    <string name="favorite">Add to favorite</string>
    <string name="price">Price:</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="complete">Complete</string>
    <string name="e_market">E-market</string>
</resources>